overflow fix

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -11,7 +11,7 @@
 html {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 body {
@@ -72,7 +72,7 @@ body {
     text-align: left;
     opacity: 0;
     p {
-      font-size: 1.6rem;
+      font-size: 24px;
       font-weight: bold;
       margin-bottom: .3rem;
       position: relative;
@@ -83,7 +83,6 @@ body {
       span {
         opacity: 1;
       }
-  
     }
   }
   .nonPC {
